workspace/MJCompiler/test/syntaxerrors/globalvariables.mj
program globalvariables 
	char slovoa, char char slovob ;
	int x, int int, y;
	
	int a[], + abc, length, b[] ;
	bool a a, boll;
	bool  d f g;
{
	void main() int az;; int bz;{
	slovoa= 'a';
	x = 1;
	y = x+5;
	length = 10;
	a = new int [length];
	b = new int [y];
	
	}
}